# spotify_music_api

./: .cache  .dockerignore  .env  .env.example  .env.production  .gitignore  .venv  CLAUDE.md  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  gunicorn.conf.py  music_downloader.db  pyproject.toml  requirements.txt  start_all.py  start_celery.py  test_api.py
app/: __init__.py  celery_app.py  database.py  main.py
deploy_scripts/: check_config.py  deploy_guide.md
docs/: DATABASE_RESET.md  DEVELOPMENT_GUIDE.md  LARAVEL_API_INTEGRATION.md  LARAVEL_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  REFACTOR_STATUS.md  RESTART_GUIDE.md  TROUBLESHOOTING.md  preview_url_solution.md
downloads/: .gitkeep  0d4cfdfab960.webm  13ccb8c59c8d.webm  14064668e874.webm  19bda917eeab.webm  1f1932860127.webm  1f71f524355f.webm  28d01ff4926e.webm  32df049b7084.webm  3550c115d699.webm  43c3aa697af5.webm  4507391e60d0.webm  45f3c9080c87.webm  4893d322e70f.webm  584537e8c42a.webm  5b47c5cc6c46.webm  6efbae06db63.webm  76595f1970a4.webm  78c2d429128a.webm  7a2a45e78476.webm  7ec30c7f420a.webm  80e3947b1fb6.webm  82cef36adf01.webm  8ab8dbbcbe46.webm  8b612e775f35.webm  91a34b8b66d1.webm  ad753ef624c4.webm  b0c5fe819766.webm  b164e9745734.webm  b8bbb723b10b.webm  c28a7f3d0d91.webm  d8ed1ffcd8a5.webm  e199a8b6fd0f.webm  e5e18a4ae526.webm  ebc5c8e758f9.webm  fadf1998c1ce.webm  fc20c2afe42b.webm  ffb372a1896c.webm
frontend/: index.html  login.html  process-manager.html
scripts/: README.md  clean_logs.py  install.sh  reset_database.py  reset_database_simple.py  start.py  (+5 more)
(+43 files in other folders)
