[project]
name = "music-downloader-api"
version = "1.0.0"
description = "Music downloader API service for Laravel backend integration"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "spotipy>=2.24.0",
    "yt-dlp>=2023.12.30",
    "mutagen>=1.47.0",
    "requests>=2.31.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "aiofiles>=23.2.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
    "ffmpeg>=1.4",
    "pydantic-settings>=2.9.1",
    "pymysql>=1.1.1",
    "redis>=6.2.0",
    "celery>=5.5.3",
    "psutil>=7.0.0",
    "flower>=2.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
